# SimpleRViz

./: README.md
devel/lib/pkgconfig/: simple_rviz_pkg.pc
devel/lib/simple_rviz_pkg/: publisher  rviz
devel/share/simple_rviz_pkg/cmake/: simple_rviz_pkgConfig.cmake
simple_rviz/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
simple_rviz/devel/lib/pkgconfig/: simple_rviz_pkg.pc
simple_rviz/devel/lib/simple_rviz_pkg/: position  robot  rviz  tf
simple_rviz/devel/share/simple_rviz_pkg/cmake/: simple_rviz_pkgConfig.cmake
simple_rviz/src/simple_rviz_pkg/: CMakeLists.txt
simple_rviz/src/simple_rviz_pkg/launch/: amcl_params.xml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
simple_rviz/src/simple_rviz_pkg/src/: Occupancy.h  Occupancygrid.cpp  move_base.launch
src/simple_rviz_pkg/: CMakeLists.txt  package.xml
src/simple_rviz_pkg/launch/: amcl_params.xml  base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base.xml
src/simple_rviz_pkg/map/: cappero_laser_odom_diag_obstacle_2020-05-06-16-26-03.world
src/simple_rviz_pkg/src/: Occupancy.h  Occupancygrid.cpp  move_base.launch  publisher.cpp  robot_controller.cpp  rviz.cpp
